# picoalloc

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
ci/: run-all-tests.sh
ci/jobs/: build-and-test-wasm.sh  build-and-test.sh  clippy.sh  fuzz.sh  rustfmt.sh
fuzz/: Cargo.toml  rust-toolchain.toml
fuzz/fuzz_targets/: allocator.rs  allocator_buffer.rs  allocator_system.rs
native/: Cargo.toml
native/src/: lib.rs
src/: allocator.rs  env.rs  global_allocator.rs  global_allocator_libc.rs  global_allocator_rust.rs  lib.rs  mutex.rs
src/env/: corevm.rs  linux.rs  mod.rs  polkavm.rs  wasm.rs
