[package]
name = "picoalloc_native"
version = "2.0.0"
edition = "2021"
publish = false

[lib]
name = "picoalloc_native"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
picoalloc = { path = "..", features = ["global_allocator_libc"] }

[features]
paranoid = ["picoalloc/paranoid"]
corevm = ["picoalloc/corevm"]
